--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="src/index.css" />
 </head>
 <body>
-
 <table class="header">
   <tr>
     <td colspan="2" rowspan="2" class="width-auto">
@@ -18,7 +17,7 @@
       <span class="subtitle">Digital IC & RTL Design | Embedded Linux • SoC | FPGA</span>
     </td>
     <th>Version</th>
-    <td class="width-min">v1.0</td>
+    <td class="width-min">1.0</td>
   </tr>
   <tr>
     <th>Updated</th>
@@ -26,7 +25,7 @@
   </tr>
   <tr>
     <th class="width-min">Contact</th>
-    <td class="width-auto">minhluu2711@gmail.com • github.com/minhhluu</td>
+    <td class="width-auto">minhluu2711@gmail.com</td>
     <th class="width-min">Location</th>
     <td>Vietnam</td>
   </tr>
@@ -134,6 +133,7 @@
 <hr>
 © 2025 Minh Luu
 <p> The Monospace Web by <a href="https://github.com/owickstrom/the-monospace-web">Oskar Wickström</a></p>
-
+<div class="debug-grid"></div>
+<script src="src/index.js"></script>
 </body>
 </html>
