--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
   <tr>
     <td colspan="2" rowspan="2" class="width-auto">
       <h1 class="title">Minh Luu</h1>
-      <span class="subtitle">Digital IC & RTL Design | Embedded Linux • SoC | FPGA</span>
+      <span class="subtitle">Digital Design • Embedded Linux</span>
     </td>
-    <th>Version</th>
-    <td class="width-min">1.0</td>
+    <th>Since</th>
+    <td class="width-min">2024</td>
   </tr>
   <tr>
     <th>Updated</th>
-    <td class="width-min"><time style="white-space: pre;">2025-07</time></td>
+    <td class="width-min"><time style="white-space: pre;">07/2025</time></td>
   </tr>
   <tr>
     <th class="width-min">Contact</th>
-    <td class="width-auto">minhluu2711@gmail.com</td>
-    <th class="width-min">Location</th>
-    <td>Vietnam</td>
+    <td class="width-auto"><a href="mailto:minhluu2711@gmail.com"><cite>Email</cite></a></td>
+    <td colspan="2" style="text-align: center;">
+    <a href="https://github.com/minhhluu"><strong>GITHUB</strong></a>
   </tr>
 </table>
 
@@ -42,8 +42,9 @@
 </nav>
 
 <h2 id="summary">Summary</h2>
-<p>Hardware Systems Engineer with hands-on experience in analog simulation, Verilog RTL design, and FPGA prototyping. 
-  Enjoys building complete systems from transistor-level layouts to integrating digital IP. Skilled in C, Verilog, and familiar with standard EDA tools.</p>
+<p>Digital Hardware Engineer with hands-on experience in RTL design, IP core development, and FPGA prototyping.
+Enjoys building systems from transistor-level layouts to digital integration. Skilled in Verilog, C, and EDA tools.
+</p>
 
 <!-- <h2 id="skills">Technical Skills</h2>
 <ul class="incremental">
