--- a/index.html
+++ b/index.html
@@ -95,42 +95,20 @@ Enjoys building systems from transistor-level layouts to digital integration. Sk
   </li>
 </ul>
 
-
-
-<h2 id="projects">Projects</h2> 
-<ul class="incremental">
-  <li><strong>4-bit ALU in Verilog (Vivado, GTKWave)</strong><br/>Designed and verified a modular ALU supporting ADD, SUB, AND, OR operations. Simulated waveforms and deployed on Basys3 Xilinx board.</li>
-  <li><strong>Serial Protocols: I2C, UART, 1-Wire & FSM Control (Verilog)</strong><br/>Integrated with temperature sensors and LCD, deployed on Altera DE2 FPGA.</li>
-  <li><strong>Signal Modulation Techniques (SciLab)</strong><br/>Explored and simulated <strong>Analog, Frequency, and Digital Modulation</strong> schemes using SciLab. Demonstrated signal transformation and spectrum analysis.</li>
-  <li><strong>Op-Amp Band-Pass Filter (LTSpice)</strong><br/>Designed and simulated active filter using 741 Op-Amp. Verified frequency response via AC analysis.</li>
-  <li><strong>6T SRAM Cell Design (LTSpice)</strong><br/>Simulated stability and performance of 6T SRAM under read/write operations.</li>
-  <li><strong>CMOS NAND/NOR, Half-Adder Layout (Microwind)</strong><br/>Created layout and analyzed sizing, area, and logical correctness.</li>
-  <li><strong>8086-microprocessor Assembly Programming</strong><br/>Wrote 8-bit multiplication, 16-bit addition/subtraction routines using registers and memory.</li>
-  <li><strong>RFID-RC522 & PWM Servo Module Integration</strong><br/>Designed a toll station management system using the RFID-RC522 module on ESP32, programmed via Arduino IDE. Data was transmitted to the cloud using the Blynk IoT platform.</li>
-</ul>
+<h2 id="projects">Projects</h2>
+<details><summary> Serial Protocols: I2C, UART, 1-Wire & FSM Control (Verilog)</summary><p>DIntegrated with temperature sensors and LCD, deployed on Altera DE2 FPGA.</p></details>
+<details><summary> 4-bit ALU in Verilog (Vivado, GTKWave)</summary><p>Designed and verified a modular ALU supporting ADD, SUB, AND, OR operations. Simulated waveforms and deployed on Basys3 Xilinx board.</p></details>
+<details><summary> CMOS NAND/NOR, Half-Adder Layout (Microwind)</summary><p>Created layout and analyzed sizing, area, and logical correctness.</p></details>
+<details><summary> 6T SRAM Cell Design (LTSpice)</summary><p>Simulated stability and performance of 6T SRAM under read/write operations.</p></details>
+<details><summary> 8086-microprocessor Assembly Programming</summary><p>Wrote 8-bit multiplication, 16-bit addition/subtraction routines using registers and memory.</p></details>
+<details><summary> Signal Modulation Techniques (SciLab)</summary><p>Explored and simulated <strong>Analog, Frequency, and Digital Modulation</strong> schemes using SciLab. Demonstrated signal transformation and spectrum analysis.</p></details>
+<details><summary> Op-Amp Band-Pass Filter (LTSpice)</summary><p>Designed and simulated active filter using 741 Op-Amp. Verified frequency response via AC analysis.</p></details>
+<details><summary> RFID-RC522 & PWM Servo Module Integration</summary><p>Designed a toll station management system using the RFID-RC522 module on ESP32, programmed via Arduino IDE. Data was transmitted to the cloud using the Blynk IoT platform.</p></details>
 
 <h2 id="education">Education</h2>
 
 <p><strong>B.Eng in Chip Design – FPT University (GPA 3.5/4.0)</strong></p>
-
-<!-- <h3>Semester 1: Foundations & Programming Integration – GPA 3.5/4.0</h3>
-<ul class="incremental">
-  <li>Hardware programming using <strong>C</strong> and <strong>8086 Assembly</strong></li>
-  <li>Core knowledge of automation and embedded systems</li>
-  <li>Digital & analog circuit fundamentals: ROM, RAM, Flip-Flops (SR, JK, D, T)</li>
-  <li>Introduction to EDA tools: <strong>LTSpice, Proteus</strong></li>
-</ul>
-
-<h3>Semester 2: Systems & RTL Design – GPA 3.72/4.0</h3>
-<ul class="incremental">
-  <li>Designed and simulated a <strong>4-bit ALU</strong> from scratch (Verilog)</li>
-  <li>Implemented <strong>I2C, UART, 1-Wire</strong> communication on FPGA (Zynq-7000)</li>
-  <li>Simulated <strong>6T SRAM cells</strong> and op-amp filters in LTSpice</li>
-  <li>Created CMOS <strong>NAND, NOR, MUX, Half-Adder</strong> layouts in Microwind</li>
-  <li>RTL design and integration using <strong>Vivado, Verilog</strong></li>
-</ul> -->
 </br>
-
 <hr>
 © 2025 Minh Luu
 <p> The Monospace Web by <a href="https://github.com/owickstrom/the-monospace-web">Oskar Wickström</a></p>
