--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Enjoys building systems from transistor-level layouts to digital integration. Sk
 </ul>
 
 <h2 id="projects">Projects</h2>
-<details><summary> Serial Protocols: I2C, UART, 1-Wire & FSM Control (Verilog)</summary><p>DIntegrated with temperature sensors and LCD, deployed on Altera DE2 FPGA.</p></details>
+<details><summary> Serial Protocols: I2C, UART, 1-Wire & FSM Control (Verilog)</summary><p>Integrated with temperature sensors and LCD, deployed on Altera DE2 FPGA.</p></details>
 <details><summary> 4-bit ALU in Verilog (Vivado, GTKWave)</summary><p>Designed and verified a modular ALU supporting ADD, SUB, AND, OR operations. Simulated waveforms and deployed on Basys3 Xilinx board.</p></details>
 <details><summary> CMOS NAND/NOR, Half-Adder Layout (Microwind)</summary><p>Created layout and analyzed sizing, area, and logical correctness.</p></details>
 <details><summary> 6T SRAM Cell Design (LTSpice)</summary><p>Simulated stability and performance of 6T SRAM under read/write operations.</p></details>
