--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <ul class="incremental">
   <li><a href="#summary">Summary</a></li>
   <li><a href="#skills">Technical Skills</a></li>
+  <li><a href="#experiences">Work Experiences</a></li>
   <li><a href="#projects">Projects</a></li>
   <li><a href="#education">Education</a></li>
 </ul>
@@ -45,6 +46,7 @@
 <p>Digital Hardware Engineer with hands-on experience in RTL design, IP core development, and FPGA prototyping.
 Enjoys building systems from transistor-level layouts to digital integration. Skilled in Verilog, C, and EDA tools.
 </p>
+
 
 <!-- <h2 id="skills">Technical Skills</h2>
 <ul class="incremental">
@@ -93,6 +95,33 @@ Enjoys building systems from transistor-level layouts to digital integration. Sk
       </li>
     </ul>
   </li>
+</ul>
+
+<h2 id="experiences"> Work Experiences</h2>
+
+@DPTek: Feb.2025 - Present
+
+<p>Development in Bluetooth-based embedded system project, focusing on <strong>Nordic nRF52832</strong> development kit:</p>
+<ul class="incremental">
+<li>Developed Bluetooth Low Energy (BLE) communication protocols, implementing both Peripheral and Central roles</li>
+<li>Familiar with Zephyr RTOS: configured device tree, built system modules, and integrated BLE stack using Zephyr build system (west, Kconfig, prj.conf)</li>
+╰─► <a href="https://github.com/minhhluu/ble_fsm_demo">Refer here</a>
+</ul>
+
+<p>Embedded Wi-Fi & Audio System Development on <strong>ESP32</strong> (ESP-IDF/ADF):</p>
+<ul class="incremental">
+<li>ESP32 Wi-Fi Configuration using ESP-IDF/ADF: Configured Access Point (AP) and Station (STA) modes for Wi-Fi communication on ESP32</li>
+<li>Developed a pipeline-based HTTP MP3 streaming system using ESP-ADF (Audio Development Framework), enabling real-time audio playback over Wi-Fi</li>
+<li>Integrated ESP-IDF networking stack and managed tasks via FreeRTOS, demonstrating knowledge of embedded Wi-Fi systems and real-time streaming</li>
+╰─► <a href="https://www.notion.so/nminhluu/2025-06-13-Play-MP3-from-HTTP-2111e2f2400c8038b98aef28f28b1379">Refer here</a> (how I did & debug)
+</ul>
+
+<p>Applied computer vision techniques to develop real-time detection and tracking systems using <strong>Python + TensorFlow-Lite</strong> (Raspberry Pi 3B):</p>
+<ul class="incremental">
+<li>Built a real-time face detection and tracking system using webcam input, applicable in access control and human–machine interaction</li>
+<li>Developed a color-based object tracking tool using HSV filtering, useful for basic robotics and item classification tasks</li>
+<li>Implemented object detection features to support smart surveillance and real-world object recognition scenarios</li>
+╰─► <a href="https://www.notion.so/nminhluu/2025-03-05-ch-y-Tensorflow-Lite-1ad1e2f2400c80d5864ee3e9939cf27d">Refer here</a>
 </ul>
 
 <h2 id="projects">Projects</h2>
